--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -13,6 +13,7 @@
     <Compile Include="SelectableList.fs" />
     <Compile Include="ShipView.fs" />
     <Compile Include="NavbarView.fs" />
+    <Compile Include="PageState.fs" />
     <!-- Info -->
     <!-- Counter -->
     <!-- Home -->
