--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -10,6 +10,7 @@
     <Compile Include="Global.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="TableCommon.fs" />
+    <Compile Include="InputComponents.fs" />
     <Compile Include="SelectableList.fs" />
     <Compile Include="ShipView.fs" />
     <Compile Include="NavbarView.fs" />
