--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -19,6 +19,7 @@
     <Compile Include="SelectableList.fs" />
     <Compile Include="ShipComponents\ShipDescription.fs" />
     <Compile Include="ShipComponents\Common.fs" />
+    <Compile Include="ShipComponents\Bridge.fs" />
     <Compile Include="ShipComponents\FuelStorage.fs" />
     <Compile Include="ShipComponents\Engine.fs" />
     <Compile Include="ShipComponents\Classification.fs" />
