--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -10,13 +10,13 @@
     <Compile Include="Measures.fs" />
     <Compile Include="BuildCost.fs" />
     <Compile Include="Global.fs" />
-    <Compile Include="Bulma\Form.fs" />
-    <Compile Include="Bulma\Card.fs" />
     <Compile Include="Technology.fs" />
     <Compile Include="ShipComponent.fs" />
     <Compile Include="Types.fs" />
-    <Compile Include="TableCommon.fs" />
-    <Compile Include="SelectableList.fs" />
+    <Compile Include="Bulma\Button.fs" />
+    <Compile Include="Bulma\Table.fs" />
+    <Compile Include="Bulma\Form.fs" />
+    <Compile Include="Bulma\Card.fs" />
     <Compile Include="ShipComponents\Common.fs" />
     <Compile Include="ShipComponents\ShipDescription.fs" />
     <Compile Include="ShipComponents\CrewQuarters.fs" />
