--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -19,14 +19,14 @@
     <Compile Include="Bulma\Table.fs" />
     <Compile Include="Bulma\Form.fs" />
     <Compile Include="Bulma\Card.fs" />
-    <Compile Include="ShipComponents\Common.fs" />
-    <Compile Include="ShipComponents\ShipDescription.fs" />
-    <Compile Include="ShipComponents\CrewQuarters.fs" />
-    <Compile Include="ShipComponents\Bridge.fs" />
-    <Compile Include="ShipComponents\FuelStorage.fs" />
-    <Compile Include="ShipComponents\Engine.fs" />
-    <Compile Include="ShipComponents\Sensors.fs" />
-    <Compile Include="ShipComponents\Classification.fs" />
+    <Compile Include="Cards\Common.fs" />
+    <Compile Include="Cards\ShipDescription.fs" />
+    <Compile Include="Cards\CrewQuarters.fs" />
+    <Compile Include="Cards\Bridge.fs" />
+    <Compile Include="Cards\FuelStorage.fs" />
+    <Compile Include="Cards\Engine.fs" />
+    <Compile Include="Cards\Sensors.fs" />
+    <Compile Include="Cards\Classification.fs" />
     <Compile Include="ShipView.fs" />
     <Compile Include="NavbarView.fs" />
     <Compile Include="PageState.fs" />
