moved everything into files so i could actually find what im looking for

--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -11,10 +11,15 @@
     <Compile Include="Model\Measures.fs" />
     <Compile Include="Model\BuildCost.fs" />
     <Compile Include="Model\Technology.fs" />
-    <Compile Include="Model\ShipComponent.fs" />
-    <Compile Include="Model\Ship.fs" />
-    <Compile Include="AppModel\Msg.fs" />
-    <Compile Include="AppModel\Model.fs" />
+    <Compile Include="Model\MaintenanceClass.fs" />
+    <Compile Include="Comp\Bridge.fs" />
+    <Compile Include="Comp\Sensors.fs" />
+    <Compile Include="Comp\Engine.fs" />
+    <Compile Include="Comp\FuelStorage.fs" />
+    <Compile Include="Comp\ShipComponent.fs" />
+    <Compile Include="Ship.fs" />
+    <Compile Include="App\Msg.fs" />
+    <Compile Include="App\Model.fs" />
     <Compile Include="Bulma\Button.fs" />
     <Compile Include="Bulma\Table.fs" />
     <Compile Include="Bulma\Form.fs" />
