--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -22,6 +22,21 @@
     <Compile Include="Ship.fs" />
     <Compile Include="App\Msg.fs" />
     <Compile Include="App\Model.fs" />
+    <Compile Include="Nerds\Icon.fs" />
+    <Compile Include="Nerds\Common.fs" />
+    <Compile Include="Nerds\ArmorSizeNerd.fs" />
+    <Compile Include="Nerds\ArmorStrengthNerd.fs" />
+    <Compile Include="Nerds\EnginePowerNerd.fs" />
+    <Compile Include="Nerds\FuelCapacityNerd.fs" />
+    <Compile Include="Nerds\FuelConsumptionNerd.fs" />
+    <Compile Include="Nerds\MaintenanceClassNerd.fs" />
+    <Compile Include="Nerds\PowerProductionNerd.fs" />
+    <Compile Include="Nerds\PriceNerd.fs" />
+    <Compile Include="Nerds\PriceTotalNerd.fs" />
+    <Compile Include="Nerds\SensorStrengthNerd.fs" />
+    <Compile Include="Nerds\SizeFloatNerd.fs" />
+    <Compile Include="Nerds\SizeIntNerd.fs" />
+    <Compile Include="Nerds\VelocityNerd.fs" />
     <Compile Include="Bulma\Button.fs" />
     <Compile Include="Bulma\Table.fs" />
     <Compile Include="Bulma\Form.fs" />
