--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -26,6 +26,7 @@
     <Compile Include="Nerds\Common.fs" />
     <Compile Include="Nerds\ArmorSizeNerd.fs" />
     <Compile Include="Nerds\ArmorStrengthNerd.fs" />
+    <Compile Include="Nerds\DeployTimeNerd.fs" />
     <Compile Include="Nerds\EnginePowerNerd.fs" />
     <Compile Include="Nerds\FuelCapacityNerd.fs" />
     <Compile Include="Nerds\FuelConsumptionNerd.fs" />
@@ -34,8 +35,10 @@
     <Compile Include="Nerds\PriceNerd.fs" />
     <Compile Include="Nerds\PriceTotalNerd.fs" />
     <Compile Include="Nerds\SensorStrengthNerd.fs" />
+    <Compile Include="Nerds\ShipNameNerd.fs" />
     <Compile Include="Nerds\SizeFloatNerd.fs" />
     <Compile Include="Nerds\SizeIntNerd.fs" />
+    <Compile Include="Nerds\ThermalSignatureNerd.fs" />
     <Compile Include="Nerds\VelocityNerd.fs" />
     <Compile Include="Bulma\Button.fs" />
     <Compile Include="Bulma\Table.fs" />
