removed people du case from ship description

--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -26,6 +26,7 @@
     <Compile Include="Nerds\Common.fs" />
     <Compile Include="Nerds\ArmorSizeNerd.fs" />
     <Compile Include="Nerds\ArmorStrengthNerd.fs" />
+    <Compile Include="Nerds\CryogenicBerthsNerd.fs" />
     <Compile Include="Nerds\DeployTimeNerd.fs" />
     <Compile Include="Nerds\EnginePowerNerd.fs" />
     <Compile Include="Nerds\FuelCapacityNerd.fs" />
@@ -37,7 +38,9 @@
     <Compile Include="Nerds\SensorStrengthNerd.fs" />
     <Compile Include="Nerds\ShipNameNerd.fs" />
     <Compile Include="Nerds\SizeNerd.fs" />
+    <Compile Include="Nerds\SpareBerthsNerd.fs" />
     <Compile Include="Nerds\ThermalSignatureNerd.fs" />
+    <Compile Include="Nerds\TotalCrewNerd.fs" />
     <Compile Include="Nerds\VelocityNerd.fs" />
     <Compile Include="Bulma\Button.fs" />
     <Compile Include="Bulma\Table.fs" />
