--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -64,6 +64,7 @@
     <Compile Include="Cards\TroopTransport.fs" />
     <Compile Include="Cards\ShipDescription.fs" />
     <Compile Include="ShipView.fs" />
+    <Compile Include="TechView.fs" />
     <Compile Include="NavbarView.fs" />
     <Compile Include="PageState.fs" />
     <Compile Include="State.fs" />
