--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -14,6 +14,7 @@
     <Compile Include="Model\ArmorCalc.fs" />
     <Compile Include="Model\MaintenanceClass.fs" />
     <Compile Include="Comp\Bridge.fs" />
+    <Compile Include="Comp\CargoHold.fs" />
     <Compile Include="Comp\Sensors.fs" />
     <Compile Include="Comp\Engine.fs" />
     <Compile Include="Comp\FuelStorage.fs" />
@@ -27,6 +28,7 @@
     <Compile Include="Nerds\Common.fs" />
     <Compile Include="Nerds\ArmorSizeNerd.fs" />
     <Compile Include="Nerds\ArmorStrengthNerd.fs" />
+    <Compile Include="Nerds\CargoCapacityNerd.fs" />
     <Compile Include="Nerds\ComponentArmorNerd.fs" />
     <Compile Include="Nerds\CryogenicBerthsNerd.fs" />
     <Compile Include="Nerds\DeployTimeNerd.fs" />
@@ -46,6 +48,7 @@
     <Compile Include="Nerds\ThermalSignatureNerd.fs" />
     <Compile Include="Nerds\TimeAtFullPowerNerd.fs" />
     <Compile Include="Nerds\TotalCrewNerd.fs" />
+    <Compile Include="Nerds\TractorStrengthNerd.fs" />
     <Compile Include="Nerds\TroopTransportNerd.fs" />
     <Compile Include="Nerds\VelocityNerd.fs" />
     <Compile Include="Bulma\Button.fs" />
@@ -56,6 +59,7 @@
     <Compile Include="Cards\Classification.fs" />
     <Compile Include="Cards\Armor.fs" />
     <Compile Include="Cards\Bridge.fs" />
+    <Compile Include="Cards\CargoHold.fs" />
     <Compile Include="Cards\CrewQuarters.fs" />
     <Compile Include="Cards\Engine.fs" />
     <Compile Include="Cards\FuelStorage.fs" />
