lots of changes related to technologies

--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -18,6 +18,7 @@
     <Compile Include="Comp\Sensors.fs" />
     <Compile Include="Comp\Engine.fs" />
     <Compile Include="Comp\FuelStorage.fs" />
+    <Compile Include="Comp\Magazine.fs" />
     <Compile Include="Comp\PowerPlant.fs" />
     <Compile Include="Comp\TroopTransport.fs" />
     <Compile Include="Comp\ShipComponent.fs" />
@@ -36,6 +37,7 @@
     <Compile Include="Nerds\ExplosionChanceNerd.fs" />
     <Compile Include="Nerds\FuelCapacityNerd.fs" />
     <Compile Include="Nerds\FuelConsumptionNerd.fs" />
+    <Compile Include="Nerds\MagazineCapacityNerd.fs" />
     <Compile Include="Nerds\MaintenanceClassNerd.fs" />
     <Compile Include="Nerds\PowerProductionNerd.fs" />
     <Compile Include="Nerds\PriceNerd.fs" />
@@ -63,6 +65,7 @@
     <Compile Include="Cards\CrewQuarters.fs" />
     <Compile Include="Cards\Engine.fs" />
     <Compile Include="Cards\FuelStorage.fs" />
+    <Compile Include="Cards\Magazine.fs" />
     <Compile Include="Cards\PowerPlant.fs" />
     <Compile Include="Cards\Sensors.fs" />
     <Compile Include="Cards\TroopTransport.fs" />
