--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "copy-webpack-plugin": "^4.6.0",
     "core-js": "^2.6.3",
     "css-loader": "^2.1.0",
-    "fable-compiler": "^2.3.0-beta-001",
+    "fable-compiler": "^2.4.7",
     "fable-loader": "^2.1.2",
     "fable-utils": "^1.0.6",
     "file-loader": "^3.0.1",
