--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,5 +15,8 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
+- script: npm install
+  displayName: 'install stuff'
+
 - script: npx webpack
   displayName: 'build application'
