--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,3 +22,11 @@ steps:
 
 - script: npx webpack
   displayName: 'build application'
+  
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(System.DefaultWorkingDirectory)/deploy'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
