Clean up azure-pipelines.yml

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Node.js with React
-# Build a Node.js project that uses React.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
-
 trigger:
 - master
 
@@ -11,20 +6,20 @@ pool:
 
 steps:
 - script: .paket\paket.bootstrapper.exe
-  displayName: 'run paket bootstrapper'
+  displayName: 'Install paket'
 - task: NodeTool@0
   inputs:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
-- script: npm install
-  displayName: 'install stuff'
-
-- script: npx webpack
-  displayName: 'build application'
+- script: |
+    npm install
+    npx webpack
+  displayName: 'Install packages and build'
   
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(System.DefaultWorkingDirectory)\deploy'
     ArtifactName: 'drop'
     publishLocation: 'Container'
+  displayName: Publish
