--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,14 +12,15 @@ steps:
     versionSpec: '10.x'
   displayName: 'Install Node.js'
 
-- script: |
-    npm install
-    npx webpack
-  displayName: 'Install packages and build'
+- script: npm install
+  displayName: 'Install packages'
+
+- script: npx webpack
+  displayName: 'Build'
   
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(System.DefaultWorkingDirectory)\deploy'
     ArtifactName: 'drop'
     publishLocation: 'Container'
-  displayName: Publish
+  displayName: 'Publish'
