--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "npx": "^10.2.0",
     "sass": "^1.16.1",
     "sass-loader": "^7.1.0",
+    "semantic-release": "^15.13.30",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
