--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -27,6 +27,8 @@
     <Compile Include="Comp\Ship.fs" />
     <Compile Include="App\Msg.fs" />
     <Compile Include="App\Model.fs" />
+    <Compile Include="Saving\LocalStorage.fs" />
+    <Compile Include="Saving\Technology.fs" />
     <Compile Include="Nerds\Icon.fs" />
     <Compile Include="Nerds\Common.fs" />
     <Compile Include="Nerds\ArmorSizeNerd.fs" />
