--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -29,6 +29,7 @@
     <Compile Include="App\Model.fs" />
     <Compile Include="Saving\LocalStorage.fs" />
     <Compile Include="Saving\Technology.fs" />
+    <Compile Include="Saving\Components.fs" />
     <Compile Include="Nerds\Icon.fs" />
     <Compile Include="Nerds\Common.fs" />
     <Compile Include="Nerds\ArmorSizeNerd.fs" />
