--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -75,6 +75,7 @@
     <Compile Include="Cards\Sensors.fs" />
     <Compile Include="Cards\TroopTransport.fs" />
     <Compile Include="Cards\ShipDescription.fs" />
+    <Compile Include="Tables\ComponentTable.fs" />
     <Compile Include="ShipView.fs" />
     <Compile Include="TechView.fs" />
     <Compile Include="NavbarView.fs" />
