--- a/src/AuroraBlueprints.fsproj
+++ b/src/AuroraBlueprints.fsproj
@@ -30,6 +30,7 @@
     <Compile Include="Saving\LocalStorage.fs" />
     <Compile Include="Saving\Technology.fs" />
     <Compile Include="Saving\Components.fs" />
+    <Compile Include="Saving\Ships.fs" />
     <Compile Include="Nerds\Icon.fs" />
     <Compile Include="Nerds\Common.fs" />
     <Compile Include="Nerds\ArmorSizeNerd.fs" />
