test: add engine component tests

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Simple Fable App",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "dotnet run -p test/AuroraBlueprints.Tests.fsproj"
   },
   "keywords": [],
   "author": "",
