refactor: create Model project

--- a/src/AuroraBlueprints.UI/AuroraBlueprints.UI.fsproj
+++ b/src/AuroraBlueprints.UI/AuroraBlueprints.UI.fsproj
@@ -3,77 +3,65 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <!-- Global to the app -->
-    <Compile Include="Global.fs" />
-    <Compile Include="File\CsvReader.fs" />
-    <Compile Include="Model\Measures.fs" />
-    <Compile Include="Model\BuildCost.fs" />
-    <Compile Include="Model\Technology.fs" />
-    <Compile Include="Model\ArmorCalc.fs" />
-    <Compile Include="Model\MaintenanceClass.fs" />
-    <Compile Include="Model\GameInfo.fs" />
-    <Compile Include="Comp\Bridge.fs" />
-    <Compile Include="Comp\CargoHold.fs" />
-    <Compile Include="Comp\Sensors.fs" />
-    <Compile Include="Comp\Engine.fs" />
-    <Compile Include="Comp\FuelStorage.fs" />
-    <Compile Include="Comp\Magazine.fs" />
-    <Compile Include="Comp\PowerPlant.fs" />
-    <Compile Include="Comp\TroopTransport.fs" />
-    <Compile Include="Comp\ShipComponent.fs" />
-    <Compile Include="Comp\Ship.fs" />
-    <Compile Include="App\Msg.fs" />
-    <Compile Include="App\Model.fs" />
-    <Compile Include="Saving\LocalStorage.fs" />
-    <Compile Include="Saving\Technology.fs" />
-    <Compile Include="Saving\Components.fs" />
-    <Compile Include="Saving\Ships.fs" />
-    <Compile Include="Nerds\Icon.fs" />
-    <Compile Include="Nerds\Common.fs" />
-    <Compile Include="Nerds\ArmorSizeNerd.fs" />
-    <Compile Include="Nerds\ArmorStrengthNerd.fs" />
-    <Compile Include="Nerds\CargoCapacityNerd.fs" />
-    <Compile Include="Nerds\ComponentArmorNerd.fs" />
-    <Compile Include="Nerds\CryogenicBerthsNerd.fs" />
-    <Compile Include="Nerds\DeployTimeNerd.fs" />
-    <Compile Include="Nerds\EnginePowerNerd.fs" />
-    <Compile Include="Nerds\ExplosionChanceNerd.fs" />
-    <Compile Include="Nerds\FuelCapacityNerd.fs" />
-    <Compile Include="Nerds\FuelConsumptionNerd.fs" />
-    <Compile Include="Nerds\MagazineCapacityNerd.fs" />
-    <Compile Include="Nerds\MaintenanceClassNerd.fs" />
-    <Compile Include="Nerds\PowerProductionNerd.fs" />
-    <Compile Include="Nerds\PriceNerd.fs" />
-    <Compile Include="Nerds\PriceTotalNerd.fs" />
-    <Compile Include="Nerds\SensorStrengthNerd.fs" />
-    <Compile Include="Nerds\ShipNameNerd.fs" />
-    <Compile Include="Nerds\ShipRangeNerd.fs" />
-    <Compile Include="Nerds\SizeNerd.fs" />
-    <Compile Include="Nerds\SpareBerthsNerd.fs" />
-    <Compile Include="Nerds\ThermalSignatureNerd.fs" />
-    <Compile Include="Nerds\TimeAtFullPowerNerd.fs" />
-    <Compile Include="Nerds\TotalCrewNerd.fs" />
-    <Compile Include="Nerds\TractorStrengthNerd.fs" />
-    <Compile Include="Nerds\TroopTransportNerd.fs" />
-    <Compile Include="Nerds\VelocityNerd.fs" />
-    <Compile Include="Bulma\Button.fs" />
-    <Compile Include="Bulma\Table.fs" />
-    <Compile Include="Bulma\FC.fs" />
-    <Compile Include="Bulma\Card.fs" />
-    <Compile Include="Cards\Common.fs" />
-    <Compile Include="Cards\Classification.fs" />
-    <Compile Include="Cards\Armor.fs" />
-    <Compile Include="Cards\Bridge.fs" />
-    <Compile Include="Cards\CargoHold.fs" />
-    <Compile Include="Cards\CrewQuarters.fs" />
-    <Compile Include="Cards\Engine.fs" />
-    <Compile Include="Cards\FuelStorage.fs" />
-    <Compile Include="Cards\Magazine.fs" />
-    <Compile Include="Cards\PowerPlant.fs" />
-    <Compile Include="Cards\Sensors.fs" />
-    <Compile Include="Cards\TroopTransport.fs" />
-    <Compile Include="Cards\ShipDescription.fs" />
-    <Compile Include="Tables\ComponentTable.fs" />
+    <ProjectReference Include="..\AuroraBlueprints.Model\AuroraBlueprints.Model.fsproj">
+      <Name>AuroraBlueprints.Model.fsproj</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="File/CsvReader.fs" />
+    <Compile Include="GameInfo.fs" />
+    <Compile Include="App/Msg.fs" />
+    <Compile Include="App/Model.fs" />
+    <Compile Include="Saving/LocalStorage.fs" />
+    <Compile Include="Saving/Technology.fs" />
+    <Compile Include="Saving/Components.fs" />
+    <Compile Include="Saving/Ships.fs" />
+    <Compile Include="Nerds/Icon.fs" />
+    <Compile Include="Nerds/Common.fs" />
+    <Compile Include="Nerds/ArmorSizeNerd.fs" />
+    <Compile Include="Nerds/ArmorStrengthNerd.fs" />
+    <Compile Include="Nerds/CargoCapacityNerd.fs" />
+    <Compile Include="Nerds/ComponentArmorNerd.fs" />
+    <Compile Include="Nerds/CryogenicBerthsNerd.fs" />
+    <Compile Include="Nerds/DeployTimeNerd.fs" />
+    <Compile Include="Nerds/EnginePowerNerd.fs" />
+    <Compile Include="Nerds/ExplosionChanceNerd.fs" />
+    <Compile Include="Nerds/FuelCapacityNerd.fs" />
+    <Compile Include="Nerds/FuelConsumptionNerd.fs" />
+    <Compile Include="Nerds/MagazineCapacityNerd.fs" />
+    <Compile Include="Nerds/MaintenanceClassNerd.fs" />
+    <Compile Include="Nerds/PowerProductionNerd.fs" />
+    <Compile Include="Nerds/PriceNerd.fs" />
+    <Compile Include="Nerds/PriceTotalNerd.fs" />
+    <Compile Include="Nerds/SensorStrengthNerd.fs" />
+    <Compile Include="Nerds/ShipNameNerd.fs" />
+    <Compile Include="Nerds/ShipRangeNerd.fs" />
+    <Compile Include="Nerds/SizeNerd.fs" />
+    <Compile Include="Nerds/SpareBerthsNerd.fs" />
+    <Compile Include="Nerds/ThermalSignatureNerd.fs" />
+    <Compile Include="Nerds/TimeAtFullPowerNerd.fs" />
+    <Compile Include="Nerds/TotalCrewNerd.fs" />
+    <Compile Include="Nerds/TractorStrengthNerd.fs" />
+    <Compile Include="Nerds/TroopTransportNerd.fs" />
+    <Compile Include="Nerds/VelocityNerd.fs" />
+    <Compile Include="Bulma/Button.fs" />
+    <Compile Include="Bulma/Table.fs" />
+    <Compile Include="Bulma/FC.fs" />
+    <Compile Include="Bulma/Card.fs" />
+    <Compile Include="Cards/Common.fs" />
+    <Compile Include="Cards/Classification.fs" />
+    <Compile Include="Cards/Armor.fs" />
+    <Compile Include="Cards/Bridge.fs" />
+    <Compile Include="Cards/CargoHold.fs" />
+    <Compile Include="Cards/CrewQuarters.fs" />
+    <Compile Include="Cards/Engine.fs" />
+    <Compile Include="Cards/FuelStorage.fs" />
+    <Compile Include="Cards/Magazine.fs" />
+    <Compile Include="Cards/PowerPlant.fs" />
+    <Compile Include="Cards/Sensors.fs" />
+    <Compile Include="Cards/TroopTransport.fs" />
+    <Compile Include="Cards/ShipDescription.fs" />
+    <Compile Include="Tables/ComponentTable.fs" />
     <Compile Include="ShipView.fs" />
     <Compile Include="TechView.fs" />
     <Compile Include="NavbarView.fs" />
