--- a/test/AuroraBlueprints.Tests.fsproj
+++ b/test/AuroraBlueprints.Tests.fsproj
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -12,6 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EngineTests.fs" />
+    <Compile Include="NamesTests.fs" />
     <Compile Include="Main.fs" />
   </ItemGroup>
   <ItemGroup>
