--- a/src/AuroraBlueprints.UI/AuroraBlueprints.UI.fsproj
+++ b/src/AuroraBlueprints.UI/AuroraBlueprints.UI.fsproj
@@ -62,6 +62,7 @@
     <Compile Include="Cards/TroopTransport.fs" />
     <Compile Include="Cards/ShipDescription.fs" />
     <Compile Include="Tables/ComponentTable.fs" />
+    <Compile Include="Tables/ShipTable.fs" />
     <Compile Include="ShipView.fs" />
     <Compile Include="TechView.fs" />
     <Compile Include="NavbarView.fs" />
