--- a/src/AuroraBlueprints.UI/AuroraBlueprints.UI.fsproj
+++ b/src/AuroraBlueprints.UI/AuroraBlueprints.UI.fsproj
@@ -63,7 +63,7 @@
     <Compile Include="Cards/ShipDescription.fs" />
     <Compile Include="Tables/ComponentTable.fs" />
     <Compile Include="Tables/ShipTable.fs" />
-    <Compile Include="ShipView.fs" />
+    <Compile Include="ShipView/Page.fs" />
     <Compile Include="TechView.fs" />
     <Compile Include="NavbarView.fs" />
     <Compile Include="PageState.fs" />
