refactor: move state change logic to Model module

--- a/src/AuroraBlueprints.UI/AuroraBlueprints.UI.fsproj
+++ b/src/AuroraBlueprints.UI/AuroraBlueprints.UI.fsproj
@@ -10,12 +10,18 @@
   <ItemGroup>
     <Compile Include="File/CsvReader.fs" />
     <Compile Include="GameInfo.fs" />
-    <Compile Include="App/Msg.fs" />
-    <Compile Include="App/Model.fs" />
     <Compile Include="Saving/LocalStorage.fs" />
     <Compile Include="Saving/Technology.fs" />
     <Compile Include="Saving/Components.fs" />
     <Compile Include="Saving/Ships.fs" />
+    <Compile Include="App/Msg.fs" />
+    <Compile Include="App/Model.fs" />
+    <Compile Include="App/Ships.fs" />
+    <Compile Include="App/Components.fs" />
+    <Compile Include="App/Technology.fs" />
+    <Compile Include="App/UI.fs" />
+    <Compile Include="App/Initialization.fs" />
+    <Compile Include="App/Builder.fs" />
     <Compile Include="Nerds/Icon.fs" />
     <Compile Include="Nerds/Common.fs" />
     <Compile Include="Nerds/ArmorSizeNerd.fs" />
